# demo-cxx-cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md
ext/Demo/: CMakeLists.txt  Demo.cpp  Demo.h
ext/hello/: CMakeLists.txt  hello.cpp
ext/hello/include/: hello.h
src/: main.cpp
